# mewbot

./: Cargo.toml  README.md
src/: bot_status.rs  config.rs  lib.rs  logging.rs  main.rs
src/ai/: anthropic.rs  client.rs  mod.rs  models.rs  openai.rs  web_search.rs  xai.rs
src/discord/: announcements.rs  client.rs  link.rs  mod.rs  roles.rs
src/discord/commands/: link_twitch.rs  mod.rs  ping.rs
src/discord/events/: handler.rs  mod.rs
src/obs/: mod.rs  models.rs  websocket.rs
src/osc/: client.rs  errors.rs  event_handler.rs  manager.rs  mod.rs  models.rs  osc_config.rs  vrchat.rs
src/storage/: client.rs  mod.rs  models.rs
src/stream_state/: errors.rs  manager.rs  mod.rs
src/stream_status/: manager.rs  mod.rs
src/twitch/: client.rs  connection_monitor.rs  handler.rs  manager.rs  mod.rs  models.rs  role_cache.rs  roles.rs  utils.rs
src/twitch/api/: client.rs  mod.rs  models.rs
src/twitch/api/requests/: announcement.rs  channel.rs  channel_points.rs  followers.rs  mod.rs  shoutout.rs
src/twitch/commands/: hello.rs  mod.rs  uptime.rs  world.rs
src/twitch/eventsub/: client.rs  handlers.rs  mod.rs
src/twitch/eventsub/events/: ads.rs  channel_bits.rs  channel_follow.rs  channel_point_redemption.rs  channel_raid.rs  channel_subscribe.rs  channel_subscription_end.rs  channel_subscription_gift.rs  channel_subscription_message.rs  channel_update.rs  mod.rs  shoutout.rs  stream_offline.rs  stream_online.rs
src/twitch/eventsub/events/redemptions/: handlers.rs  mod.rs  models.rs
src/twitch/irc/: bot_client.rs  broadcaster_client.rs  client.rs  command_system.rs  handler.rs  message_handler.rs  mod.rs
src/twitch/irc/commands/: ad_commands.rs  add_redeem.rs  calc.rs  channel_management.rs  complete_redemption.rs  continue_message.rs  debug.rs  discord.rs  followers.rs  fun_commands.rs  hello.rs  mod.rs  ping.rs  reset_drop_game.rs  set_active_games.rs  set_offline_redeem.rs  shoutout.rs  toggle_redeem.rs  uptime.rs  verify.rs  vrc.rs  world.rs
src/twitch/pubsub/: client.rs  handlers.rs  mod.rs
src/twitch/redeems/: defaults.rs  dynamic_action_manager.rs  manager.rs  mod.rs  models.rs  registry.rs  sync_manager.rs
src/twitch/redeems/actions/: ai_response.rs  ai_web_search.rs  ask_ai.rs  coin_game.rs  custom_action.rs  mod.rs  osc_message.rs  toss_pillo.rs  utils.rs  vrc_osc.rs  vrc_toggle_redeems.rs
src/vrchat/: client.rs  manager.rs  mod.rs  models.rs  websocket.rs
src/web_ui/: api_routes.rs  config.rs  mod.rs  server.rs  storage_ext.rs  websocket.rs  websocket_server.rs
web_ui/frontend/: tailwind.config.js
web_ui/frontend/src/: App.js  index.css  index.js
web_ui/frontend/src/components/: BotStatus.js  Chat.js  Chatbox.js  Dashboard.js  ErrorBoundary.js  Layout.js  OBSControl.js  OBSOverlay.js  Settings.js  SettingsForm.js  TwitchPlayer.js  VRChatWorldStatus.js  useWebSocket.js
