[package]
name = "mewbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mewbot"
path = "src/lib.rs"

[[bin]]
name = "mewbot"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrchatapi = "^1.0"
twitch-irc = "5.0.1"
url = "2.4.1"
futures = "0.3.28"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-native-certs", "rustls-tls-native-roots", "native-tls", "rustls-tls-webpki-roots"] }
native-tls = "0.2.11"
http = "0.2.9"
serde = "1.0.190"
serde_json = "1.0.108"

[dependencies.tokio]
version = "1.33.0"
features = [
    "rt",
    "time",
    "sync",
    "macros",
    "full",
    "rt-multi-thread"
]

[dependencies.tokio-native-tls]
version = "0.3"

[dependencies.tokio-rustls]
version = "0.24"

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]