[package]
name = "mewbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mewbot"
path = "src/lib.rs"

[[bin]]
name = "mewbot"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrchatapi = "^1.17.6"
twitch-irc = "^5.0.1"
url = "^2.5.1"
futures = "^0.3"
futures-util = "^0.3"
tokio-tungstenite = { version = "^0.23", features = ["rustls-native-certs", "rustls-tls-native-roots", "native-tls", "rustls-tls-webpki-roots"] }
native-tls = "^0.2"
http = "^1.1.0"
serde = "^1.0.203"
serde_json = "^1.0.117"
reqwest = { version = "^0.12.5", features = ["json", "cookies"] }
rpassword = "^7.3.1"
percent-encoding = "^2.3.1"
config = "^0.14.0"
tungstenite = "^0.23.0"
serenity = "^0.12.2"
twitch_api = { version = "^0.7.0-rc.7", features = ["pubsub", "helix", "twitch_oauth2", "client", "eventsub"] }
twitch_oauth2 = "^0.13.0"
rosc = "^0.10.1"
toml = "^0.8.14"
chrono = {  version = "^0.4.38", features = ["serde"] }
webbrowser = "^1.0.1"
warp = "^0.3.7"
lazy_static = "^1.5.0"
async-trait = "^0.1.81"
rand = { version = "^0.8.5", features = ["small_rng"] }
clap = { version = "^4.5.9", features = ["derive"] }
rusqlite = { version = "^0.32.1", features = ["chrono", "bundled"] }
cc = "^1.1.7"
parking_lot = "0.12.3"
lru-cache = "0.1.2"
colored = "2.1.0"


[dependencies.tokio]
version = "^1.38"
features = [
    "rt",
    "time",
    "sync",
    "macros",
    "full",
    "rt-multi-thread"
]

[dependencies.tokio-native-tls]
version = "^0.3.1"

[dependencies.tokio-rustls]
version = "^0.26.0"

[dependencies.tokio-stream]
version = "^0.1"
features = ["io-util"]

[dependencies.tokio-util]
version = "^0.7"
features = ["codec"]

