[package]
name = "mewbot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mewbot"
path = "src/lib.rs"

[[bin]]
name = "mewbot"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrchatapi = "^1.18"
twitch-irc = "^5.0"
url = "^2.5"
futures = "^0.3"
futures-util = "^0.3"
tokio-tungstenite = { version = "^0.23", features = ["rustls-native-certs", "rustls-tls-native-roots", "native-tls", "rustls-tls-webpki-roots"] }
native-tls = "^0.2"
http = "^1.1"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "^0.12", features = ["json", "cookies"] }
rpassword = "^7.3"
percent-encoding = "^2.3"
config = "^0.14"
tungstenite = "^0.23"
serenity = "^0.12"
twitch_api = { version = "^0.7.0-rc.7", features = ["pubsub", "helix", "twitch_oauth2", "client", "eventsub"] }
twitch_oauth2 = "^0.13"
rosc = "^0.10"
toml = "^0.8"
chrono = {  version = "^0.4", features = ["serde"] }
webbrowser = "^1.0"
warp = "^0.3"
lazy_static = "^1.5"
async-trait = "^0.1"
rand = { version = "^0.8", features = ["small_rng"] }
clap = { version = "^4.5", features = ["derive"] }
rusqlite = { version = "^0.32", features = ["chrono", "bundled"] }
cc = "^1.1"
parking_lot = "^0.12"
lru-cache = "^0.1"
colored = "2.1.0"
log = "^0.4"
fern = { version = "^0.6", features = ["colored"] }
hyper = "0.14.30"

[dependencies.tokio]
version = "^1.39"
features = [
    "rt",
    "time",
    "sync",
    "macros",
    "full",
    "rt-multi-thread"
]

[dependencies.tokio-native-tls]
version = "^0.3.1"

[dependencies.tokio-rustls]
version = "^0.26.0"

[dependencies.tokio-stream]
version = "^0.1"
features = ["io-util"]

[dependencies.tokio-util]
version = "^0.7"
features = ["codec"]

